# Game

./: .gitignore  CMakeLists.txt  Doxyfile  Guidelines.md  TODO.md  a.out
App/: main  main.cpp
App/Builder/: build_run_main.bash
App/Headers/Engine/: PhysicEngine.hpp  RenderEngine.hpp
App/Headers/Entity/: Entity.hpp
App/Headers/Events/: CustomEvent.hpp
App/Headers/Scenes/: Scene.hpp
App/Source/Engine/: PhysicEngine.cpp  RenderEngine.cpp
App/Source/Entity/: Entity.cpp
App/Source/Events/: EventHandler.cpp
App/Test/: entity_test  entity_test.bash  entity_test.cpp  event_test  event_test.bash  event_test.cpp
App/Test/sprite_test/: build.bash  executable  script.cpp
Data/: testData.json
Data/GameData/: entityData.json  sceneData.json  transitionData.json
Data/PlayerData/: settings.json
Debug/: debug.cpp  debug2.cpp
Doc/html/: _border_transition_8cpp.html  _border_transition_8cpp__incl.map  _border_transition_8cpp__incl.md5  _border_transition_8cpp_source.html  _border_transition_8hpp.html  _border_transition_8hpp__dep__incl.map  _border_transition_8hpp__dep__incl.md5  _border_transition_8hpp__incl.map  _border_transition_8hpp__incl.md5  _border_transition_8hpp_source.html  _collidable_entity_8hpp.html  _collidable_entity_8hpp__dep__incl.map  _collidable_entity_8hpp__dep__incl.md5  _collidable_entity_8hpp__incl.map  _collidable_entity_8hpp__incl.md5  _collidable_entity_8hpp_source.html  _collider_component_8cpp.html  _collider_component_8cpp__incl.map  _collider_component_8cpp__incl.md5  _collider_component_8cpp_source.html  _collider_component_8hpp.html  _collider_component_8hpp__dep__incl.map  _collider_component_8hpp__dep__incl.md5  _collider_component_8hpp__incl.map  _collider_component_8hpp__incl.md5  _collider_component_8hpp_source.html  _custom_event_8hpp.html  _custom_event_8hpp__dep__incl.map  _custom_event_8hpp__dep__incl.md5  _custom_event_8hpp__incl.map  _custom_event_8hpp__incl.md5  _custom_event_8hpp_source.html  _ennemy_8cpp.html  _ennemy_8cpp__incl.map  _ennemy_8cpp__incl.md5  _ennemy_8cpp_source.html  _ennemy_8hpp.html  _ennemy_8hpp__dep__incl.map  _ennemy_8hpp__dep__incl.md5  _ennemy_8hpp__incl.map  (+1006 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+54 more)
Doc/latex/: _border_transition_8cpp.tex  _border_transition_8cpp__incl.md5  _border_transition_8hpp.tex  _border_transition_8hpp__dep__incl.md5  _border_transition_8hpp__incl.md5  _collidable_entity_8hpp.tex  _collidable_entity_8hpp__dep__incl.md5  _collidable_entity_8hpp__incl.md5  _collider_component_8cpp.tex  _collider_component_8cpp__incl.md5  _collider_component_8hpp.tex  _collider_component_8hpp__dep__incl.md5  _collider_component_8hpp__incl.md5  _custom_event_8hpp.tex  _custom_event_8hpp__dep__incl.md5  _custom_event_8hpp__incl.md5  _ennemy_8cpp.tex  _ennemy_8cpp__incl.md5  _ennemy_8hpp.tex  _ennemy_8hpp__dep__incl.md5  _ennemy_8hpp__incl.md5  _entity_8cpp.tex  _entity_8cpp__incl.md5  _entity_8hpp.tex  _entity_8hpp__dep__incl.md5  _entity_8hpp__incl.md5  _entity_sprite_component_8cpp.tex  _entity_sprite_component_8cpp__incl.md5  _entity_sprite_component_8hpp.tex  _entity_sprite_component_8hpp__dep__incl.md5  _entity_sprite_component_8hpp__incl.md5  _event_8hpp.tex  _event_8hpp__dep__incl.md5  _event_a_8hpp.tex  _event_a_8hpp__dep__incl.md5  _event_a_8hpp__incl.md5  _event_handler_8cpp.tex  _event_handler_8cpp__incl.md5  _event_handler_8hpp.tex  _event_handler_8hpp__dep__incl.md5  (+424 more)
Headers/Components/BasicComponents/: EntitySpriteComponent.hpp  TransformableComponent.hpp
Headers/Engine/: PhysicEngine.hpp  RenderEngine.hpp
Headers/Entity/: Entity.hpp
Headers/Entity/Ennemies/: Ennemy.hpp
Headers/Events/: Event.hpp
Headers/Scenes/: Scene.hpp
Logs/: entity .txt  entity.txt  game   .txt  game.txt  general.txt
Tests/: test.cpp
Tests/ColliderTest/: ColliderTest.cpp
Tests/ParsingTest/: ParsingTest.cpp
Tests/RenderTest/: renderTest.cpp
includes/: Game.hpp  logger.hpp
includes/Engine/: PhysicsEngine.hpp  RenderEngine.hpp
includes/Entity/: CollidableEntity.hpp  Entity.hpp
includes/Events/: Event.hpp  EventHandler.hpp
includes/Loaders/: sceneLoader.hpp
includes/Scenes/: Scene.hpp
includes/Transition/: Transition.hpp
includes/Transitions/: Transition.hpp
src/: Game.cpp  logger.cpp  main.cpp
src/Components/: EntitySpriteComponent.cpp  TransformableComponent.cpp
src/Engine/: PhysicEngine.cpp  PhysicsEngine.cpp  RenderEngine.cpp
src/Events/: EventHandler.cpp
src/Loaders/: sceneLoader.cpp  settingsLoader.cpp
src/Scenes/: Scene.cpp
(+29 files in other folders)
